@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-17T08:20:26Z",
-  "count_outdated" : 523,
-  "uniques_outdated" : 302,
-  "count" : 552,
-  "uniques" : 318,
+  "timestamp" : "2022-09-18T01:58:57Z",
+  "count_outdated" : 525,
+  "uniques_outdated" : 304,
+  "count" : 555,
+  "uniques" : 320,
   "clones" : [
-    {
-      "timestamp": "2022-09-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 2,
@@ -91,10 +84,10 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
