@@ -1,12 +1,7 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-09-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 2,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
